--- a/instagram.html
+++ b/instagram.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <img src="imagens/tela-instagram.jpg" alt="Instagram">
-  <a href="https://www.instagram.com/gustavoguanabara/">ACESSE</a>
+  <img src="imagens/tela-kaio-instagram.jpg" alt="Instagram">
+  <a href="https://www.instagram.com/kaio31vinicius/" target="_blank">ACESSE</a>
 
 </body>
 
